# cpp-experiments

./: CMakeLists.txt  asm.txt  main.cpp  test_c_wrapper.c  test_c_wrapper.cpp  test_c_wrapper.hpp  test_default_virtual.cpp  test_default_virtual.hpp  test_elementsof.cpp  test_elementsof.hpp  test_function_ptr.cpp  test_function_ptr.hpp  test_function_template_parameter.cpp  test_function_template_parameter.hpp  test_overload_return_param.cpp  test_overload_return_param.hpp  test_sorting.cpp  test_sorting.hpp  test_template_template.cpp  test_template_template.hpp  test_translation_table.cpp  test_translation_table.hpp
